--- a/examples/Black-Tailed Godwit_JAB_example/A4_GeoLight_analysis.Rmd
+++ b/examples/Black-Tailed Godwit_JAB_example/A4_GeoLight_analysis.Rmd
@@ -1,11 +1,12 @@
 <!--
 %\VignetteEngine{knitr}
-%\VignetteIndexEntry{Tree swallow analysis}
+%\VignetteIndexEntry{Bar-Tailed Godwit GeoLight analysis}
 %\VignetteDepends{FLightR}
 -->
 # Intigeo tag on a Bar tailed godwit analysis example
 ## GeoLight analysis
-
+Appendix A1 to 
+Rakhimberdiev, E., Senner, N. R., Verhoeven, M. A., Winkler, D. W., Bouten, W. and Piersma T. 2015 Comparing inferences of solar geolocation data against high-precision GPS data: annual movements of a double-tagged Black-Ttailed Godwit. - Journal of Avian Biology 000: 000-000.
 ```{r}
 require(GeoLight)
 ```
