--- a/examples/Black-Tailed Godwit_JAB_example/A5_FLightR_analysis.Rmd
+++ b/examples/Black-Tailed Godwit_JAB_example/A5_FLightR_analysis.Rmd
@@ -4,6 +4,9 @@
 %\VignetteDepends{FLightR}
 -->
 # Intigeo tag on a Bar tailed godwit analysis example
+# FLightR analysis
+Appendix A1 to 
+Rakhimberdiev, E., Senner, N. R., Verhoeven, M. A., Winkler, D. W., Bouten, W. and Piersma T. 2015 Comparing inferences of solar geolocation data against high-precision GPS data: annual movements of a double-tagged Black-Ttailed Godwit. - Journal of Avian Biology 000: 000-000.
 ## Install package
 ```{r}
 require(devtools)
