--- a/examples/Black-Tailed_Godwit_JAB_example/A4_GeoLight_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A4_GeoLight_analysis.Rmd
@@ -1,3 +1,6 @@
+---
+output: pdf_document
+---
 <!--
 %\VignetteEngine{knitr}
 %\VignetteIndexEntry{Bar-Tailed Godwit GeoLight analysis}
@@ -8,18 +11,18 @@
 Appendix A1 to 
 Rakhimberdiev, E., Senner, N. R., Verhoeven, M. A., Winkler, D. W., Bouten, W. and Piersma T. 2015 Comparing inferences of solar geolocation data against high-precision GPS data: annual movements of a double-tagged Black-Tailed Godwit. - Journal of Avian Biology 000: 000-000.
 
-```{r}
-# we used GeoLight 1.03 version, so you might want to install it if you want to get exactly the same results.
+we used GeoLight 1.03 version, so you might want to install it if you want to get exactly the same results.
+```{r, eval = F}
 packageurl <- "http://cran.r-project.org/src/contrib/Archive/GeoLight/GeoLight_1.03.tar.gz"
 install.packages(packageurl, repos=NULL, type="source")
 library(GeoLight)
 ```
 ##Download data from GitHub
-There are two files available in the directory: *.lux and *.csv. *.lux is the original file you get from James Fox. This file does not have defined twilights. There is plenty of ways to predefine twilights and here I will use the TAGS online service (http://tags.animalmigration.org). In order to process data to the TAGS format one should do following:
+There are two files available in the directory: *.lux and *.csv. *.lux is the original file you get from Migrate Technology Ltd. This file does not have defined twilights. There is plenty of ways to predefine twilights and here I will use the TAGS online service (http://tags.animalmigration.org). In order to process data to the TAGS format one should do following:
 1. Download [.lux](https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example/A2_raw_data.lux) file into your working directory. I assume you will name it 'A2_raw_data.lux'.
 2. open R and process .lux file
-```{r}
-# set working directory
+```{r, eval = F}
+## set working directory
 setwd("your path")
 convert.lux.to.tags("A2_raw_data.lux")
 ```
@@ -29,34 +32,44 @@ Many datasets contain some very bad data in the beginning and in the end. If you
 
 Let's now assume that you have done the previous step and have a [.csv](https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example/A3_TAGS_format.csv) file downloaded from TAGS. Now you can process these data:
 
-```{r}
+```{r, eval = F}
 File="A3_TAGS_format.csv"
 TAGS.twilights<-read.csv(File, stringsAsFactors =F)
 ``` 
 Or you can download it straight into R:
-```{r}
+```{r, eval = F}
 library(RCurl)
-text <- getURL("https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example/A3_TAGS_format.csv"
-		, ssl.verifypeer = FALSE, followlocation = TRUE)
+text <- getURL("https://raw.githubusercontent.com/eldarrak/FLightR/
+                master/examples/black-tailed_godwit_Intigeo_tag_example/
+                A3_TAGS_format.csv"
+                , ssl.verifypeer = FALSE, followlocation = TRUE)
 TAGS.twilights<-read.csv(text=text, stringsAsFactors =F)
-TAGS.twilights$light<-exp(TAGS.twilights$light) # this is needed because we log transformed data in convert.lux.to.tags()
+TAGS.twilights$light<-exp(TAGS.twilights$light) # this is needed because
+                      # we log transformed data in convert.lux.to.tags()
 
-TAGS.twilights$datetime<-as.POSIXct(TAGS.twilights$datetime, tz="UTC", format="%Y-%m-%dT%T")
+TAGS.twilights$datetime<-as.POSIXct(TAGS.twilights$datetime,
+                                    tz="UTC", format="%Y-%m-%dT%T")
 
 # so we have to extract twilights
-tw<-TAGS.twilights[TAGS.twilights$twilight>0 &  TAGS.twilights$excluded==0 & TAGS.twilights$datetime<as.POSIXct("2014-05-18", tz="UTC"),]
+tw<-TAGS.twilights[TAGS.twilights$twilight>0 &  TAGS.twilights$excluded==0
+ & TAGS.twilights$datetime<as.POSIXct("2014-05-18", tz="UTC"),]
 
 # make pairs of pairs
 tw$datetime[tw$twilight==2]<-tw$datetime[tw$twilight==2]-(300-60)
 
-gl_twl<-data.frame(tFirst=tw$datetime[which(diff(tw$datetime)<20)], tSecond=tw$datetime[which(diff(tw$datetime)<20)+1], type=tw$twilight[which(diff(tw$datetime)<20)])
+gl_twl<-data.frame(tFirst=tw$datetime[which(diff(tw$datetime)<20)],
+                   tSecond=tw$datetime[which(diff(tw$datetime)<20)+1],
+				   type=tw$twilight[which(diff(tw$datetime)<20)])
 
 # ok now we have to work with GeoLight
 
 #Calibrate the sun elevation angle with a known location
-calib1 <- gl_twl[gl_twl$tFirst<=as.POSIXct("2013-08-05", tz="UTC"),] #designate first twilights for calibration
+#designate first twilights for calibration
+calib1 <- gl_twl[gl_twl$tFirst<=as.POSIXct("2013-08-05", tz="UTC"),] 
 known.coord <- c(5.43, 52.93)
-elev <- getElevation(calib1$tFirst,calib1$tSecond,calib1$type,known.coord=known.coord,plot=T) #get sun elevation angle 
+elev <- getElevation(calib1$tFirst,calib1$tSecond,
+                     calib1$type,known.coord=known.coord,
+					 plot=T) #get sun elevation angle 
 
 #Generate the coordinates
 coord <- coord(gl_twl$tFirst, gl_twl$tSecond, gl_twl$type, elev)
@@ -68,7 +81,8 @@ coord2$tFirst<-gl_twl$tFirst
 coord2$tSecond<-gl_twl$tSecond
 coords<-coord2
 
-coords$tMean<-as.POSIXct(apply(cbind(coords$tFirst,coords$tSecond), 1 , mean), tz="UTC", origin="1970-01-01")
+coords$tMean<-as.POSIXct(apply(cbind(coords$tFirst,coords$tSecond), 1 , mean),
+                         tz="UTC", origin="1970-01-01")
 
 save(coords, file="GeoLight_coords.RData")
 
@@ -77,9 +91,11 @@ tripMap(coord, xlim=c(-10, 10), ylim=c(0, 60))
 #---------------------------------
 # ok, now we will also try to estimate migration 
 
-sites <- changeLight(gl_twl$tFirst, gl_twl$tSecond,gl_twl$type, rise.prob = 0.5, set.prob = 0.5, days = 3, quantile=0.99)
+sites <- changeLight(gl_twl$tFirst, gl_twl$tSecond,gl_twl$type,
+                     rise.prob = 0.5, set.prob = 0.5, days = 3, quantile=0.99)
 
-# ok, we have got many sites.. let's check where are the ones that we really need..
+# ok, we have got many sites.
+# let's check where are the ones that we really need..
 
 save(sites, file="GLsites.RData")
 
