--- a/examples/Black-Tailed_Godwit_JAB_example/A5_FLightR_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A5_FLightR_analysis.Rmd
@@ -1,3 +1,6 @@
+---
+output: pdf_document
+---
 <!--
 %\VignetteEngine{knitr}
 %\VignetteIndexEntry{Bar-Tailed Godwit FLightR analysis}
@@ -9,10 +12,9 @@ Appendix A1 to
 Rakhimberdiev, E., Senner, N. R., Verhoeven, M. A., Winkler, D. W., Bouten, W. and Piersma T. 2015 Comparing inferences of solar geolocation data against high-precision GPS data: annual movements of a double-tagged Black-Tailed Godwit. - Journal of Avian Biology 000: 000-000.
 
 ## Install package
-```{r}
+We used FLightR 0.3.4 version, so you might want to install it if you want to get exactly the same results.
 
-# we used FLightR 0.3.4 version, so you might want to install it if you want to get exactly the same results.
-
+```{r, eval = F}
 library(devtools)
 install_github("eldarrak/FLightR@0.3.4") # note the version
 library(FLightR)
@@ -21,7 +23,7 @@ library(FLightR)
 There are two files available in the directory: *.lux and *.csv. *.lux is the original file you get from Migrate Technology. This file does not have defined twilights. There is plenty of ways to predefine twilights and here I will use the TAGS online service (http://tags.animalmigration.org). In order to process data to the TAGS format one should do following:
 1. Download [.lux](https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example/A2_raw_data.lux) file into your working directory. I assume you will name it 'A2_raw_data.lux'.
 2. open R and process .lux file
-```{r} 
+```{r, eval = F} 
 # set working directory
 setwd("your path")
 convert.lux.to.tags("A2_raw_data.lux")
@@ -32,26 +34,29 @@ Many datasets contain some very bad data in the beginning and in the end. If you
 
 Let's now assume that you have done the previous step and have a [.csv](https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example/A3_TAGS_format.csv) file downloaded from TAGS. Now you can process these data:
 
-```{r}
+```{r, eval = F}
 File="A3_TAGS_format.csv"
 TAGS.twilights<-read.csv(File, stringsAsFactors =F)
 ``` 
 Or you can download it straight into R:
-```{r}
+```{r, eval = F}
 library(RCurl)
-text <- getURL("text <- getURL("https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example/A3_TAGS_format.csv"
-		, ssl.verifypeer = FALSE, followlocation = TRUE)
+text <- getURL("text <- getURL("https://raw.githubusercontent.com/eldarrak
+           /FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example
+           /A3_TAGS_format.csv",
+           ssl.verifypeer = FALSE, followlocation = TRUE)
 TAGS.twilights<-read.csv(text=text, stringsAsFactors =F)
-TAGS.twilights$light<-exp(TAGS.twilights$light) # this is needed because we log transformed data in convert.lux.to.tags()
-
+TAGS.twilights$light<-exp(TAGS.twilights$light) 
+# exp is needed because we log transformed data in convert.lux.to.tags()
 ```
 Now we have data read and we want to process them with the `read.tags.light.twilight()` function:
-```{r}
-FLightR.data<-read.tags.light.twilight(TAGS.twilights, start.date="2013-06-10", end.date="2014-05-17")
+```{r, eval = F}
+FLightR.data<-read.tags.light.twilight(TAGS.twilights,
+                      start.date="2013-06-10", end.date="2014-05-17")
 
 ```
 and process them with
-```{r}
+```{r, eval = F}
 Proc.data<-process.twilights(FLightR.data$Data, FLightR.data$twilights, 
                              measurement.period=60, saving.period=300)
 ```
@@ -60,7 +65,7 @@ Proc.data<-process.twilights(FLightR.data$Data, FLightR.data$twilights,
 Current tag measures data every minute (`measurement.period=60`) and saves maximum over 5 minutes (`saving.period=300`)
 
 add calibration location as x,y
-```{r}
+```{r, eval = F}
 start=c(5.43, 52.93)
 
 log.light.borders=c(2, 8) # default values for Intigeo tag
@@ -68,7 +73,7 @@ log.irrad.borders=c(-3,1.5) # default values for Intigeo tag
 ```
 ##Calibration
 We need to select days when bird was in a known location. These are typically days in the beginning or in the end the data. To do we first will plot all sun slopes over the whole period and then will decide when is our calibration period
-```{r}
+```{r, eval = F}
 Calibration.periods<-data.frame(calibration.start=as.POSIXct("2000-01-01"),
                                 calibration.stop=as.POSIXct("2020-01-01"),
 								lon=start[1], lat=start[2])
@@ -76,19 +81,20 @@ Calibration.periods<-data.frame(calibration.start=as.POSIXct("2000-01-01"),
 calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data,
                             model.ageing=F, log.light.borders=log.light.borders, 
 							log.irrad.borders=log.irrad.borders)
-# and log irradiance boundaries also outside normal range  as we want to see the whole track first.
+# and log irradiance boundaries also outside normal range 
+#  as we want to see the whole track first.
 
 plot.slopes(calibration.parameters$All.slopes)
 ```
-Now we have to select the calibration periods. One should try to play with 1abline()` to find the proper boundaries for the calibration. The calibration is characterized by more or less coinciding dawn and dusk lines. And absense of a strong pattern - the lines should be norizontal.
-```{r}
+Now we have to select the calibration periods. One should try to play with `abline()` to find the proper boundaries for the calibration. The calibration is characterized by more or less coinciding dawn and dusk lines. And absense of a strong pattern - the lines should be norizontal.
+```{r, eval = F}
 abline(v=as.POSIXct("2013-08-10")) # end of first calibration period
 abline(v=as.POSIXct("2014-05-05")) # start of the second calibration period
 ```
 I will use both calibration periods  - one in the beginning and another in the end. Now we create a data.frame where each line is one of the calibration periods. and the columns are start, end, x, y.
 
-```{r}
-Calibration.periods<-data.frame(calibration.start=as.POSIXct(c("2000-01-01", "2014-05-05") ),
+```{r, eval = F}
+Calibration.periods<-data.frame(calibration.start=as.POSIXct(c("2000-01-01", "2014-05-05")),
                                 calibration.stop=as.POSIXct(c("2013-08-10", "2020-01-01")),
 								lon=start[1], lat=start[2])
 
@@ -98,7 +104,7 @@ model.ageing=T # set this FALSE is you are not going to model tag ageing.
 
 ```
 And now we estimate calibration parameters with a real boundaries...
-```{r}
+```{r, eval = F}
 calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.data, 
 	model.ageing=model.ageing, log.light.borders=log.light.borders,
 	log.irrad.borders=log.irrad.borders)
@@ -107,7 +113,7 @@ plot.slopes(calibration.parameters$All.slopes)
 ```
 The next part is needed to exclude very strong outliers if there are some
 
-```{r}
+```{r, eval = F}
 
 if (length(calibration.parameters$calib_outliers)>0) {
 FLightR.data$twilights$excluded[which(sapply(FLightR.data$twilights$datetime,
@@ -123,7 +129,7 @@ plot.slopes(calibration.parameters$All.slopes)
 ```
 Now we create a preliminary calibration and use it to check whether there are serious outliers that should be excluded before hand.
 
-```{r}
+```{r, eval = F}
 Calibration=create.calibration(calibration.parameters$All.slopes, Proc.data,
         FLightR.data, log.light.borders=log.light.borders,
         log.irrad.borders=log.irrad.borders, start,
@@ -139,7 +145,7 @@ Outliers<-detect.tsoutliers(Calibration, Proc.data, plot=T,
 ```
 Now it is very important to decide on whether we are going to exclude outliers or not. One does not want to do it if there are definitely many important points exluded. In the currect case the outliers are detected well an we go for the exclusion
 
-```{r}
+```{r, eval = F}
 # DO not run next if you do not want to exclude outliers!!!
 exclude.detected.outliers=T
 if (exclude.detected.outliers) {
@@ -176,7 +182,7 @@ Processed.light<-make.processed.light.object(FLightR.data)
 ## Spatial extent
 Now we set up a grid.
 
-```{r}
+```{r, eval = F}
 ylim = c(30, 57)
 xlim = c(-14, 13)
 
@@ -203,7 +209,7 @@ There are two main ideas in the extent -
 
 Now we will finalize the object preparation
 
-```{r}
+```{r, eval = F}
 Index.tab<-create.proposal(Processed.light, start=start, Grid=Grid)
 Index.tab$Decision<-0.1 # prob of migration
 Index.tab$Direction<- 0 # direction 0 - North
@@ -218,7 +224,7 @@ all.in$Data<-FLightR.data
 ```
 Now we estimate likelihoods for every point of the grid at every twilight.
 
-```{r}
+```{r, eval = F}
 # the next step might have some time
 # with the current example it takes about 5 min at 24 core workstation
 
@@ -234,7 +240,7 @@ all.in$Spatial$Phys.Mat<-Phys.Mat
 ```
 Doing some preliminary checks now:
 First, we plot likelihood surface for a sample twilight
-```{r}
+```{r, eval = F}
 t=1
 my.golden.colors <- colorRampPalette(c("white","#FF7100"))
 
@@ -248,7 +254,7 @@ abline(h=start[2])
 ```
 And second we mutiply likelihoods by each other and see where the results is going to be.
 
-```{r}
+```{r, eval = F}
 my.golden.colors <- colorRampPalette(c("white","#FF7100"))
 
 #if (FALSE) {
@@ -274,7 +280,7 @@ For the main run you might want to select:
    2. known.last select TRUE if you know that in the end of data collection tag was in a known place
    3. check.outliers - additional on a fly outliers selection. Normally shoud be chosen as TRUE.
    
-```{r}
+```{r, eval = F}
 
 # the following part uses outlier detection
 if (FALSE) {
@@ -313,7 +319,7 @@ This is it. Now we can do some plotting.
 
 ## Plotting results
 First, plot a map:
-```{r}
+```{r, eval = F}
 
 par(mfrow=c(1,1))
 par(mar=c(4,4,3,1),las=1,mgp=c(2.25,1,0))
@@ -338,7 +344,7 @@ points(Mean_coords, pch = 16, cex = 0.75, col = "blue")
 box()
 ```
 And now longitudes and latitudes separately
-```{r}
+```{r, eval = F}
 Quantiles<-Result$Results$Quantiles[1:length(Result$Indices$Matrix.Index.Table$Real.time),]
 Quantiles$Time<-Result$Indices$Matrix.Index.Table$Real.time
 
@@ -385,11 +391,11 @@ abline(v=as.POSIXct("2012-03-22 21:34:30 EDT"), col=1, lwd=1, lty=2)
 ## Migration schedules
 We can extract departure arrival estimates from the results we have got. 
 First select grid points that are of interest. For example in the current data we are interested to figure out when our bird left the Netherlands. We will make  a boundary at Lat 2&deg;
-```{r}
+```{r, eval = F}
 Index<-which(Result$Spatial$Grid[,1]>(2))
 ```
 And now I estimate probabilities if being in the area for each twilight:
-```{r}
+```{r, eval = F}
 Prob.of.being.in.NL<-get.prob.of.being.in(Result, Index)
 
 Times.NL=find.times.distribution(Prob.of.being.in.NL,Result$Indices$Matrix.Index.Table$time)
