--- a/examples/Black-Tailed_Godwit_JAB_example/A5_FLightR_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A5_FLightR_analysis.Rmd
@@ -27,10 +27,11 @@ convert.lux.to.tags("A2_raw_data.lux")
 ```
 Now we have created a csv file that can be uploaded to [TAGS](http://tags.animalmigration.org)
 There you define light threshold at 2.5, process all the data and save them with 'save light-twilight' option.
-Many datasets contain some very bad data in the beginning and in the end. If you do not want to clean all these noysy ens you may just write down start and end date of the data you want to work with and then use these values at the next step.
+Many datasets contain some very bad data in the beginning and in the end. If you do not want to clean all these noisy entries by hand you may just write down start and end date of the data you want to work with and then use these values at the next step.
 
 Let's now assume that you have done the previous step and have a [.csv](https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example/A3_TAGS_format.csv) file downloaded from TAGS. Now you can process these data:
 
+Note, there is also another workflow for twilight detection with BAStag package for [.lig files](https://github.com/eldarrak/FLightR/blob/master/examples/step_by_step_examples/lig%20-%20BAStags%20-%20FLightR%20workflow.Rmd) and [.lux files](https://github.com/eldarrak/FLightR/blob/master/examples/step_by_step_examples/lux%20-%20BAStags%20-%20FLightR%20workflow.Rmd).
 ```{r, eval = F}
 File="A3_TAGS_format.csv"
 TAGS.twilights<-read.csv(File, stringsAsFactors =F)
