--- a/R/NEWS
+++ b/R/NEWS
@@ -9,4 +9,6 @@
 # ver 0.2.2 functions reorganized and the whole package is cleaned all output is in the results section now.
 # ver 0.2.3 June 10 2015 added the double calibration option reorganized the workflow.
 # ver 0.2.4 June 16 2015  pf filter became MUCH faster! the rest is more or less unchanged
-# ver. 0.3.4 08 Oct 2014 fast lm first implementation
+# ver 0.3.4 08 Oct 2014 fast lm first implementation
+# ver 0.3.5 Nove 2015 correction in time - positions match
+# ver 0.3.6 03 Dec 2015 new boundaries for Intigeo tags, changes in black-tailed godwit examples.
