--- a/examples/Black-Tailed_Godwit_JAB_example/A5_FLightR_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A5_FLightR_analysis.Rmd
@@ -39,9 +39,7 @@ TAGS.twilights<-read.csv(File, stringsAsFactors =F)
 Or you can download it straight into R:
 ```{r, eval = F}
 library(RCurl)
-text <- getURL("text <- getURL("https://raw.githubusercontent.com/eldarrak
-           /FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example
-           /A3_TAGS_format.csv",
+text <- getURL("https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/Black-Tailed_Godwit_JAB_example/A3_TAGS_format.csv",
            ssl.verifypeer = FALSE, followlocation = TRUE)
 TAGS.twilights<-read.csv(text=text, stringsAsFactors =F)
 TAGS.twilights$light<-exp(TAGS.twilights$light) 
@@ -66,8 +64,8 @@ add calibration location as x,y
 ```{r, eval = F}
 start=c(5.43, 52.93)
 
-log.light.borders=c(2, 8) # default values for Intigeo tag
-log.irrad.borders=c(-3,1.5) # default values for Intigeo tag
+log.light.borders=c(1.5, 8.5) # default values for Intigeo tag
+log.irrad.borders=c(-4.25, 2.55) # default values for Intigeo tag
 ```
 ##Calibration
 We need to select days when bird was in a known location. These are typically days in the beginning or in the end the data. To do we first will plot all sun slopes over the whole period and then will decide when is our calibration period
