ts.outliers change

--- a/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
@@ -128,8 +128,7 @@ Now we create a preliminary calibration and use it to check whether there are se
 
 ```{r, eval = F}
 Calibration=create.calibration(calibration.parameters$All.slopes, Proc.data,
-        FLightR.data, log.light.borders=log.light.borders,
-        log.irrad.borders=log.irrad.borders, start,
+        FLightR.data, start,
         ageing.model=calibration.parameters$ageing.model)
 
 Threads=detectCores()-1 # setting how many cores we allow to use
@@ -167,7 +166,7 @@ calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.dat
 plot.slopes(calibration.parameters$All.slopes)
 
 Calibration=create.calibration(calibration.parameters$All.slopes, Proc.data,
-        FLightR.data, log.light.borders=log.light.borders,log.irrad.borders=log.irrad.borders,
+        FLightR.data,
 	start, ageing.model=calibration.parameters$ageing.model)
 
 }
