--- a/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
@@ -62,10 +62,11 @@ Current tag measures data every minute (`measurement.period=60`) and saves maxim
 
 add calibration location as x,y
 ```{r, eval = F}
-start=c(5.43, 52.93)
+#start=c(5.43, 52.93)
+start=c(5.47, 53.04)
 
 log.light.borders=c(1.5, 9) # default values for Intigeo tag
-log.irrad.borders=c(-4.5, 4.5) # default values for Intigeo tag
+log.irrad.borders=c(-4.35, 4.35) # default values for Intigeo tag
 ```
 ##Calibration
 We need to select days when bird was in a known location. These are typically days in the beginning or in the end the data. To do we first will plot all sun slopes over the whole period and then will decide when is our calibration period
@@ -84,14 +85,14 @@ plot.slopes(calibration.parameters$All.slopes)
 ```
 Now we have to select the calibration periods. One should try to play with `abline()` to find the proper boundaries for the calibration. The calibration is characterized by more or less coinciding dawn and dusk lines. And absense of a strong pattern - the lines should be norizontal.
 ```{r, eval = F}
-abline(v=as.POSIXct("2013-08-10")) # end of first calibration period
+abline(v=as.POSIXct("2013-08-20")) # end of first calibration period
 abline(v=as.POSIXct("2014-05-05")) # start of the second calibration period
 ```
 I will use both calibration periods  - one in the beginning and another in the end. Now we create a data.frame where each line is one of the calibration periods. and the columns are start, end, x, y.
 
 ```{r, eval = F}
 Calibration.periods<-data.frame(calibration.start=as.POSIXct(c("2000-01-01", "2014-05-05")),
-                                calibration.stop=as.POSIXct(c("2013-08-10", "2020-01-01")),
+                                calibration.stop=as.POSIXct(c("2013-08-20", "2020-01-01")),
 								lon=start[1], lat=start[2])
 
 model.ageing=T # set this FALSE is you are not going to model tag ageing.
@@ -143,7 +144,7 @@ Now it is very important to decide on whether we are going to exclude outliers o
 
 ```{r, eval = F}
 # DO not run next if you do not want to exclude outliers!!!
-exclude.detected.outliers=F
+exclude.detected.outliers=T
 if (exclude.detected.outliers) {
 Proc.data<-Outliers$Proc.data
 FLightR.data$twilights$excluded[which(!as.numeric(FLightR.data$twilights$datetime) %in%
@@ -167,7 +168,7 @@ calibration.parameters<-get.calibration.parameters(Calibration.periods, Proc.dat
 plot.slopes(calibration.parameters$All.slopes)
 
 Calibration=create.calibration(calibration.parameters$All.slopes, Proc.data,
-        FLightR.data,
+        FLightR.data, log.light.borders=log.light.borders, log.irrad.borders=log.irrad.borders,
 	start, ageing.model=calibration.parameters$ageing.model)
 
 }
@@ -307,7 +308,7 @@ Result<-run.particle.filter(all.in, save.Res=F, cpus=min(Threads,6),
 		precision.sd=25, save.memory=T, k=NA,
 		parallel=T,  plot=T, prefix="pf",
 		extend.prefix=T, cluster.type="SOCK",
-		a=45, b=1500, L=45, adaptive.resampling=0.99, check.outliers=F)
+		a=45, b=1500, L=60, adaptive.resampling=0.99, check.outliers=F)
 b= Sys.time()
 b-a
 save(Result, file="Result.bltg.ageing.model.noOD.RData")
