--- a/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
@@ -17,33 +17,23 @@ install_github("eldarrak/FLightR@0.3.6") # note the version
 library(FLightR)
 ```
 ##Download data from GitHub
-There are two files available in the directory: *.lux and *.csv. *.lux is the original file you get from Migrate Technology. This file does not have defined twilights. There is plenty of ways to predefine twilights and here I will use the TAGS online service (http://tags.animalmigration.org). In order to process data to the TAGS format one should do following:
-1. Download [.lux](https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example/A2_raw_data.lux) file into your working directory. I assume you will name it 'A2_raw_data.lux'.
-2. open R and process .lux file
-```{r, eval = F} 
-# set working directory
-setwd("your path")
-convert.lux.to.tags("A2_raw_data.lux")
-```
-Now we have created a csv file that can be uploaded to [TAGS](http://tags.animalmigration.org)
-There you define light threshold at 2.5, process all the data and save them with 'save light-twilight' option.
-Many datasets contain some very bad data in the beginning and in the end. If you do not want to clean all these noisy entries by hand you may just write down start and end date of the data you want to work with and then use these values at the next step.
+There are two files available in the directory: *.lux and *.csv. *.lux is the original file you get from Migrate Technology Ltd. This file does not have defined twilights. In the appendix A3 we already defined twilights with BAStag package and saved them. You can define twilights by yourself or just download file with predefined format.
+Let's now assume that you have done the previous step and have a [.csv](https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example/A3_TAGS_format.csv) file. Now you can process these data:
 
-Let's now assume that you have done the previous step and have a [.csv](https://raw.githubusercontent.com/eldarrak/FLightR/master/examples/black-tailed_godwit_Intigeo_tag_example/A3_TAGS_format.csv) file downloaded from TAGS. Now you can process these data:
-
-Note, there is also another workflow for twilight detection with BAStag package for [.lig files](https://github.com/eldarrak/FLightR/blob/master/examples/step_by_step_examples/lig%20-%20BAStags%20-%20FLightR%20workflow.Rmd) and [.lux files](https://github.com/eldarrak/FLightR/blob/master/examples/step_by_step_examples/lux%20-%20BAStags%20-%20FLightR%20workflow.Rmd).
 ```{r, eval = F}
 File="A3_TAGS_format.csv"
 TAGS.twilights<-read.csv(File, stringsAsFactors =F)
 ``` 
 Or you can download it straight into R:
-```{r, eval = F}
+```{r, eval = FALSE, tidy=FALSE}
 library(RCurl)
-text <- getURL("https://raw.githubusercontent.com/eldarrak/FLightR/0.3.6/examples/Black-Tailed_Godwit_JAB_example/A3_TAGS_format.csv",
-           ssl.verifypeer = FALSE, followlocation = TRUE)
+text <- getURL("https://raw.githubusercontent.com/eldarrak/FLightR/0.3.6/examples/Black-Tailed_Godwit_JAB_example/A3_TAGS_format.csv"
+                , ssl.verifypeer = FALSE, followlocation = TRUE)
 TAGS.twilights<-read.csv(text=text, stringsAsFactors =F)
-TAGS.twilights$light<-exp(TAGS.twilights$light) 
-# exp is needed because we log transformed data in convert.lux.to.tags()
+
+
+TAGS.twilights$light<-exp(TAGS.twilights$light) # this is needed because
+                      # we log transformed data in convert.lux.to.tags()
 ```
 Now we have data read and we want to process them with the `read.tags.light.twilight()` function:
 ```{r, eval = F}
