--- a/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A6_FLightR_analysis.Rmd
@@ -292,7 +292,7 @@ save(Result, file="Result.bltg.ageing.model.RData")
 
 } 
 
-# and this is the main run w/o outlier detection
+# and this is the main run w/o online outlier detection
 
 nParticles=1e6
 Threads= detectCores()-1
