--- a/examples/Black-Tailed_Godwit_JAB_example/A5_GeoLight_analysis.Rmd
+++ b/examples/Black-Tailed_Godwit_JAB_example/A5_GeoLight_analysis.Rmd
@@ -40,7 +40,7 @@ TAGS.twilights$datetime<-as.POSIXct(TAGS.twilights$datetime,
 tw<-TAGS.twilights[TAGS.twilights$twilight>0 &  TAGS.twilights$excluded==0
  & TAGS.twilights$datetime<as.POSIXct("2014-05-18", tz="UTC"),]
 
-# make pairs of pairs
+# make pairs
 tw$datetime[tw$twilight==2]<-tw$datetime[tw$twilight==2]-(300-60)
 
 gl_twl<-data.frame(tFirst=tw$datetime[which(diff(tw$datetime)<20)],
@@ -52,19 +52,15 @@ gl_twl<-data.frame(tFirst=tw$datetime[which(diff(tw$datetime)<20)],
 #Calibrate the sun elevation angle with a known location
 #designate first twilights for calibration
 calib1 <- gl_twl[gl_twl$tFirst<=as.POSIXct("2013-08-05", tz="UTC"),] 
-known.coord <- c(5.43, 52.93)
+known.coord <- start=c(5.47, 53.04)
+
 elev <- getElevation(calib1$tFirst,calib1$tSecond,
                      calib1$type,known.coord=known.coord,
 					 plot=T) #get sun elevation angle 
 
-#Generate the coordinates
-crds <- coord(gl_twl$tFirst, gl_twl$tSecond, gl_twl$type, elev)
 
 #Generate the coordinates
 crds <- coord(twl=gl_twl, degElevation = elev)
-#!!!!!!!!!!!!!!!!!!!!!!!!!!
-# @ Simeon - results are slightly different!!
-
 
 #Add times to GeoLight crds
 crds <- data.frame(Time = as.POSIXct(apply(cbind(gl_twl$tFirst,gl_twl$tSecond), 1 , mean), tz="UTC", origin="1970-01-01"),
@@ -80,13 +76,22 @@ tripMap(crds, xlim=c(-10, 10), ylim=c(0, 60))
 #---------------------------------
 # Now we will also try to estimate migration 
 
-cL <- changeLight(gl_twl,  quantile = 0.65, days = 3)
-# cL <- changeLight(gl_twl,  quantile = 0.95, days = 3) 0.95 does not work..
+cL <- changeLight(gl_twl,  quantile = 0.95, days = 3) #0.95 does not work..
 
-mS <- mergeSites(gl_twl, site = cL$site, degElevation = elev, distThreshold = 350)
+mS <- mergeSites(gl_twl, site = cL$site, degElevation = elev, distThreshold = 400)
 
 siteMap(crds[,c("Lon", "Lat")], mS$site, type = "cross", hull = F, xlim = c(-12, 12), ylim = c(30, 58))
+
 (schedule(tFirst = gl_twl$tFirst, gl_twl$tSecond, site = mS$site))
+```
+
+```
+  Site             Arrival           Departure
+1    a                <NA> 2013-08-20 11:55:25
+2    b 2013-08-26 00:10:58 2014-04-20 00:26:08
+3    c 2014-04-22 00:17:36 2014-04-28 11:59:32
+4    d 2014-05-02 23:45:04                <NA>
+```
 
 crds$Site <- mS$site
 
